# Client-2

./: .gitmodules  CMakeLists.txt  MonocleClient.wixproj  Product.wxs  libmfx.lib  license.rtf  versions.xml
clientcli/: CMakeLists.txt  main.cpp  main.h
libfile/: CMakeLists.txt  file.fbs
libfile/src/: file.cpp  fileread.cpp  filewrite.cpp
liblicense/: CMakeLists.txt
liblicense/src/: database.cpp  liblicense.cpp  license.cpp  licensekey.cpp  productkey.cpp  user.cpp
libmonoclecameramanager/: CMakeLists.txt  mainwindow.ui
libmonoclecameramanager/src/: devicetree.cpp  devicetreeitem.cpp  devicetreeonvifitem.cpp  mainwindow.cpp  networkmapper.cpp  onvifitem.cpp
libmonocleclient/: CMakeLists.txt  aboutwindow.ui  browsefileswindow.ui  devicelogwindow.ui  devicepropertieswindow.ui  editdevicewindow.ui  exportprogresswindow.ui  exportwindow.ui  findmotionwindow.ui  findobjectwindow.ui  infoformatwindow.ui  mainwindow.ui  managedevicewindow.ui  managefileswindow.ui  managefilewindow.ui  managegroupswindow.ui  managegroupwindow.ui  managelayoutnamewindow.ui  managelayoutswindow.ui  managelayoutwindow.ui  managemapswindow.ui  managemapwindow.ui  manageonvifdeviceipv4networkinterfaceconfigurationswindow.ui  manageonvifdeviceipv4networkinterfaceconfigurationwindow.ui  manageonvifmediaaudioencoderconfigurationswindow.ui  manageonvifmediaaudioencoderconfigurationwindow.ui  manageonvifmediaaudiooutputconfigurationswindow.ui  manageonvifmediaaudiooutputconfigurationwindow.ui  manageonvifmediaaudiosourceconfigurationswindow.ui  manageonvifmediaaudiosourceconfigurationwindow.ui  manageonvifmediacreateprofilewindow.ui  manageonvifmediametadataconfigurationswindow.ui  manageonvifmediametadataconfigurationwindow.ui  manageonvifmediaprofileswindow.ui  manageonvifmediaprofilewindow.ui  manageonvifmediavideoencoderconfigurationswindow.ui  manageonvifmediavideoencoderconfigurationwindow.ui  manageonvifmediavideosourceconfigurationswindow.ui  manageonvifmediavideosourceconfigurationwindow.ui  manageonvifuserswindow.ui  (+25 more)
libmonocleclient/src/: aboutwindow.cpp  actions.cpp  browsefilestree.cpp  browsefilestreeitem.cpp  browsefileswindow.cpp  checkforupdate.cpp  connection.cpp  decoder.cpp  device.cpp  devicelogwindow.cpp  devicemgr.cpp  devicepropertieswindow.cpp  devicetree.cpp  devicetreedeviceitem.cpp  devicetreeitem.cpp  devicetreemapitem.cpp  devicetreemediaitem.cpp  devicetreemediarecordingitem.cpp  devicetreerecordingitem.cpp  devicetreerecordingjobitem.cpp  devicetreerecordingjobsitem.cpp  devicetreerecordingjobsourceitem.cpp  devicetreerecordingtrackitem.cpp  devicetreerecordingtracksitem.cpp  discoverytree.cpp  editdevicewindow.cpp  exportprogresswindow.cpp  exportwindow.cpp  file.cpp  filterlineedit.cpp  findmotionplaybackwidget.cpp  findmotionvideowidget.cpp  findmotionwindow.cpp  findobjectplaybackwidget.cpp  findobjectvideowidget.cpp  findobjectwindow.cpp  group.cpp  h264decoder.cpp  h265decoder.cpp  imagebuffer.cpp  (+105 more)
libmonocleclient/translations/: monocle_en_GB.ts  monocle_en_US.ts
libmonocleprotocol/: CMakeLists.txt  addfilerequest.fbs  addgrouprequest.fbs  addlayoutrequest.fbs  addmaprequest.fbs  addonvifuserrequest.fbs  addreceiverrequest.fbs  addrecordingjobrequest.fbs  addrecordingjobresponse.fbs  addrecordingjobsource.fbs  addrecordingrequest.fbs  addrecordingresponse.fbs  addtrackrequest.fbs  addtrackrequest2.fbs  addtrackresponse.fbs  adduserrequest.fbs  authenticaterequest.fbs  authenticateresponse.fbs  changegrouprequest.fbs  changelayoutnamerequest.fbs  changelayoutrequest.fbs  changemaprequest.fbs  changeonvifuserrequest.fbs  changereceiverrequest.fbs  changerecordingjobrequest.fbs  changerecordingjobsource.fbs  changerecordingrequest.fbs  changetrackrequest.fbs  changetrackrequest2.fbs  changeuserrequest.fbs  codec.fbs  codecindex.fbs  controlstreamend.fbs  controlstreamframesteprequest.fbs  controlstreamliverequest.fbs  controlstreampauserequest.fbs  controlstreamplayrequest.fbs  controltrackstatisticsstreamend.fbs  controltrackstatisticsstreamrequest.fbs  controltrackstatisticsstreamresult.fbs  (+165 more)
libmonocleprotocol/src/: monocleprotocol.cpp
libonvifclient/: CMakeLists.txt
libonvifclient/src/: analyticsclient.cpp  connection.cpp  connectionblock.cpp  deviceclient.cpp  deviceioclient.cpp  eventclient.cpp  imagingclient.cpp  mediaclient.cpp  onvifclient.cpp  ptzclient.cpp  receiverclient.cpp  recordingclient.cpp  replayclient.cpp  scopedconnection.cpp  searchclient.cpp
libonvifserver/: CMakeLists.txt
libonvifserver/src/: deviceioserviceinterface.cpp  deviceserviceinterface.cpp  eventserviceinterface.cpp  header.cpp  httpserver.cpp  nonce.cpp  onvifserver.cpp  onvifservice.cpp  receiverserviceinterface.cpp  recordingserviceinterface.cpp  replayserviceinterface.cpp  searchserviceinterface.cpp  serverresponse.cpp  service.cpp  soapfault.cpp  user.cpp
libonviftypes/: CMakeLists.txt
libonviftypes/src/: aacdecoptions.cpp  absolutefocus.cpp  absolutefocusoptions.cpp  analyticscapabilities.cpp  analyticsdevicecapabilities.cpp  analyticsengineconfiguration.cpp  arrayoffileprogress.cpp  attachmentdata.cpp  audiodecoderconfiguration.cpp  audiodecoderconfigurationoptions.cpp  audioencoderconfiguration.cpp  audioencoderconfigurationoption.cpp  audioencoderconfigurationoptions.cpp  audioencoding.cpp  audiooutputconfiguration.cpp  audiooutputconfigurationoptions.cpp  audiosource.cpp  audiosourceconfiguration.cpp  audiosourceconfigurationoptions.cpp  autofocusmode.cpp  backlightcompensation.cpp  backlightcompensation20.cpp  backlightcompensationmode.cpp  backlightcompensationoptions20.cpp  backupfile.cpp  binarydata.cpp  capabilities.cpp  capabilitycategory.cpp  certificate.cpp  certificateinformation.cpp  certificatestatus.cpp  certificateusage.cpp  config.cpp  date.cpp  (+230 more)
librtsp/: CMakeLists.txt
libsocket/: CMakeLists.txt
libutility/: CMakeLists.txt
libwsdiscover/: CMakeLists.txt
monoclecameramanager/: CMakeLists.txt  license.rtf  main.cpp  main.h
monocleclient/: CMakeLists.txt  license.rtf  main.cpp  main.h
sqlite3/: CMakeLists.txt
tests/: CMakeLists.txt
(+1359 files in other folders)
